# apocalyptic-literature-stats

./: .env_example  .gitignore  Cargo.toml  README.md  The Golden Age of Apocalyptic Literature.ipynb  custom.css  goodreads-google-trends.csv  index.html
goodreads/: popular_by_year.json
goodreads/shelves/: genres.json
goodreads/shelves/apocalyptic/: books.json
src/: lib.rs  main.rs  viz.rs
src/apis/: mod.rs
src/apis/goodreads/: mod.rs  shelf.rs  year.rs
src/data/: mod.rs  shelf_data.rs  year_data.rs
