[package]
name = "apocalyptic-literature-stats"
version = "0.1.0"
authors = ["Duncan Gibbs <duncgibbs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
serde = { version = "1.0.116", features = ["derive"] }
fantoccini = "0.14.1"
dotenv = "0.15.0"
tokio = { version = "0.2.22", features = ["macros"] }
serde_json = "1.0"
csv = "1.1.3"
